@@ -1,8 +1,8 @@
 Package: oce
 Version: 0.9-11
-Date: 2013-06-30
+Date: 2013-07-02
 Title: Analysis of Oceanographic data
-Author: Dan E. Kelley <Dan.Kelley@Dal.Ca>
+Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan E. Kelley <Dan.Kelley@Dal.Ca>
 Depends: R (>= 2.15), utils, methods, mapproj
 Suggests: ncdf, foreign
